fixed minor styling on mobile view

--- a/code/src/components/Footer.css
+++ b/code/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer-container {
     background-color: rgba(15, 7, 7, 0.541);
     position: relative;
-    top: 8vh;
+    top: 14vh;
     width: 100vw;
     padding: 5px;
 }
@@ -10,4 +10,10 @@
     color: rgb(255, 90, 61);
     text-align: center;
     line-height: 3px;
+}
+
+@media (min-width: 768px) {
+    .footer-container {
+        top: 8vh;
+    }
 }
