--- a/code/src/components/MovieList.css
+++ b/code/src/components/MovieList.css
@@ -1,7 +1,7 @@
 .movies-overview {
     font-size: 10px;
     position: relative;
-    top: 8vh;
+    top: 13vh;
     transition: transform 0.5s;
 }
 
@@ -39,4 +39,10 @@
 .movie-titles, .release-dates {
     margin: 5px;
     line-height: 26px;
+}
+
+@media (min-width: 768px) {
+    .movies-overview {
+        top: 8vh;
+    }
 }
